<resources>
    <string name="app_name">AplikasiGithubUser</string>

    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_message">Please search user…</string>
    <string name="search_hint">Type Username…</string>
    <string name="user_not_found">User Not Found</string>
    <string name="followers_not_found">%s Has No Followers</string>
    <string name="following_not_found">%s Does Not Follow Anyone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen">Splash Screen</string>
</resources>