<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:minHeight="64dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatarImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/avatar"
        android:padding="16dp"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/avatarImageView"
        android:maxLines="1"
        android:paddingTop="26dp"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/nameUserTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTextView"
        android:layout_toEndOf="@id/avatarImageView"
        android:maxLines="1"
        android:paddingTop="8dp"
        android:textStyle="italic"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textSize="14sp"
        tools:text="@string/name" />

</RelativeLayout>