<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.details.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatarImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/repositoryTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_background"/>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyUserTextView"
        app:layout_constraintTop_toBottomOf="@+id/followersTextView" />

    <!--Public Repos Configurations-->

    <TextView
        android:id="@+id/repositoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:text="@string/repository"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toBottomOf="@id/totalRepositoryUserTextView"
        app:layout_constraintEnd_toStartOf="@id/followersTextView"/>

    <TextView
        android:id="@+id/totalRepositoryUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="0"
        app:layout_constraintStart_toStartOf="@id/repositoryTextView"
        app:layout_constraintTop_toTopOf="@id/avatarImageView"
        app:layout_constraintEnd_toEndOf="@id/repositoryTextView"/>
    <!--Public Repos Configurations End-->

    <!-- Followers Configurations-->
    <TextView
        android:id="@+id/followersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:text="@string/followers"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toEndOf="@id/repositoryTextView"
        app:layout_constraintTop_toBottomOf="@id/totalFollowersUserTextView"
        app:layout_constraintEnd_toStartOf="@id/followingTextView"/>

    <TextView
        android:id="@+id/totalFollowersUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        tools:text="1"
        app:layout_constraintTop_toTopOf="@id/totalRepositoryUserTextView"
        app:layout_constraintStart_toStartOf="@id/followersTextView"
        app:layout_constraintEnd_toEndOf="@id/followersTextView"/>
    <!-- Followers Configurations End-->

    <!-- Following Configurations-->
    <TextView
        android:id="@+id/followingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/following"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toEndOf="@id/followersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalFollowingUserTextView"/>

    <TextView
        android:id="@+id/totalFollowingUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/followingTextView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/followingTextView"
        app:layout_constraintTop_toTopOf="@id/totalFollowersUserTextView"
        tools:text="2" />
    <!-- Following Configurations End-->

    <TextView
        android:id="@+id/nameUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/avatarImageView"
        app:layout_constraintTop_toBottomOf="@id/avatarImageView"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/nameUserTextView"
        app:layout_constraintTop_toBottomOf="@id/nameUserTextView"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/companyUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView"
        app:layout_constraintStart_toStartOf="@id/usernameTextView"
        app:drawableStartCompat="@drawable/ic_baseline_domain_24"
        tools:text="@string/company"/>

    <TextView
        android:id="@+id/locationUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/companyUserTextView"
        app:layout_constraintTop_toBottomOf="@id/companyUserTextView"
        tools:text="@string/location"
        app:drawableStartCompat="@drawable/ic_baseline_location_24" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:tabTextColor="@android:color/darker_gray"
        app:tabSelectedTextColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/locationUserTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>